--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sass-loader": "8.0.2",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
+    "styled-components": "^5.2.0",
     "svg-sprite-loader": "^5.0.0",
     "svgo-loader": "^2.2.1",
     "terser-webpack-plugin": "4.2.3",
@@ -158,6 +159,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.4",
     "@types/webpack-env": "^1.15.3"
   }
 }
