--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "mini-css-extract-plugin": "0.11.3",
+    "mobx": "^6.0.1",
     "node-sass": "npm:dart-sass",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
