--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     ]
   },
   "devDependencies": {
+    "@types/antd": "^1.0.0",
     "@types/styled-components": "^5.1.4",
     "@types/webpack-env": "^1.15.3"
   }
