--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "leancloud-storage": "^4.7.0",
     "mini-css-extract-plugin": "0.11.3",
     "mobx": "^6.0.1",
     "mobx-react": "^7.0.0",
@@ -164,6 +165,7 @@
   "devDependencies": {
     "@types/antd": "^1.0.0",
     "@types/styled-components": "^5.1.4",
-    "@types/webpack-env": "^1.15.3"
+    "@types/webpack-env": "^1.15.3",
+    "happypack": "^5.0.1"
   }
 }
